# JNIProject

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yizhen/jniproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/yizhen/jniproject/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/yizhen/jniproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
